--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
      <div class="info-wrap">
       <div class="img">
-        <img src="https://s1.ax1x.com/2023/09/01/pP0Dcss.jpg" alt="">
+        <img src="https://s1.ax1x.com/2023/09/01/pPB9AYR.png" alt="">
       </div>
       <div class="info-right">
     <h1>Hushnow</h1>
@@ -22,8 +22,7 @@
     <dl>
         <dt>Team introduction</dt>
         <dd>
-        <dd>Hushnow，在中国成语中可以理解为万籁俱寂的意思，主要表达了一种和谐与平静的氛围，我们小组选择“Hush-now”作为小组的名称，主要是希望在小组内创造出一个和谐平静的氛围，在面对困难和挑战时，小组成员们能够始终在讨论和合作时保持冷静和理性。
-我们的小组由五名成员组成，分别是：李祯辰，宋煜恒，蒋文清，姚亚亚，马元朝。（小组成员详情<a href="https://hush-now.github.io/team-member/">Link</a>）</dd>
+        <dd>Hushnow，In Chinese idiom, it can be understood as the meaning of "all music is silent", which mainly expresses a harmonious and calm atmosphere. Our group chose "Hush-now" as the name of the group mainly because we hope to create a harmonious and calm atmosphere within the group, so that the members can always remain calm and rational when discussing and cooperating with each other in the face of difficulties and challenges. Our group consists of five members. Our group consists of five members: Li Zhenchen, Song Yuheng, Jiang Wenqing, Yao Yaya and Ma Yuanzhao.（Group Member Details<a href="https://hush-now.github.io/team-member/">Link</a>）</dd>
         
         <br/>
         
