--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
      <div class="info-wrap">
       <div class="img">
-        <img src="https://s1.ax1x.com/2023/09/01/pPB91kd.png" alt="">
+        <img src="https://s1.ax1x.com/2023/09/01/pPB9NX8.png" alt="">
       </div>
       <div class="info-right">
     <h1>Hushnow</h1>
