--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
     <table>
         <tr align="center">
-        <td><img src="https://s1.ax1x.com/2023/09/01/pPB9NX8.png" alt=""></td><h1>Hushnow</h1>
+        <td><img src="https://s1.ax1x.com/2023/09/01/pPB9NX8.png" alt=""></td>
+        <h1>Hushnow</h1>
         
     </tr>
     </table>
