--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         
     <div style="padding: 5px;">
-        <img src="https://s1.ax1x.com/2023/09/03/pPDmQC8.png" border="0" />
+        <img src="https://s1.ax1x.com/2023/09/03/pPDm3vQ.png" border="0" />
     </div>
         
 
