--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
                 <li>Hushnow，In Chinese idiom, it can be understood as the meaning of "all music is silent", which mainly expresses a harmonious and calm atmosphere. Our group chose "Hush-now" as the name of the group mainly because we hope to create a harmonious and calm atmosphere within the group, so that the members can always remain calm and rational when discussing and cooperating with each other in the face of difficulties and challenges. Our group consists of five members. Our group consists of five members: Li Zhenchen, Song Yuheng, Jiang Wenqing, Yao Yaya and Ma Yuanzhao.（Group Member Details<a href="https://hush-now.github.io/team-member/">Link</a>）</li>
             </ul>
         <br/>
-
+        <br>
+        <dt>Instructor</dt>
+        <dd>
+            <ul>
+                <li>Qi Li（<a href="https://teoec.dlmu.edu.cn/info/1067/3754.htm">Link</a>）</li>
+            </ul>
+        <br/>
             
 
             
