--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <br>
                 <li>Week 1 (27 August - 3 September) <a href="https://hush-now.github.io/week-1/">Link</a></li>
                 <br>
-                <li>Week 2 (4 September - 10 September) </li>
+                <li>Week 2 (4 September - 10 September) <a href="https://hush-now.github.io/week-2/">Link</a></li>
                 <br>
                 <li>Week 3 (11 September - 17 September)</li>
                 <br>
