--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 <br>
                 <li>Week 2 (4 September - 10 September) <a href="https://hush-now.github.io/week-2/">Link</a></li>
                 <br>
-                <li>Week 3 (11 September - 17 September)</li>
+                <li>Week 3 (11 September - 17 September)<a href="https://hush-now.github.io/week3/">Link</a></li>
                 <br>
-                <li>Week 4 (18 September - 24 September)</li>
+                <li>Week 4 (18 September - 24 September)<a href="https://hush-now.github.io/week4/">Link</a></li>
                 <br>
-                <li>Week 5 (25 September -  1 October)</li>
+                <li>Week 5 (25 September -  1 October)<a href="https://hush-now.github.io/week5/">Link</a></li>
             </ul>
             <dt>Coming soon......</dt>
     </dd>
